# preferential-colouring-of-random-graphs

./: .gitignore  CMakeLists.txt  Makefile  README.md  avoiding_kuratowski_graphs_painter.cpp  avoiding_kuratowski_graphs_painter.hpp  ba_graph.hpp  benchmarks-visualisation.ipynb  colors_balance_globally_painter.cpp  colors_balance_globally_painter.hpp  colors_balance_locally_painter.cpp  colors_balance_locally_painter.hpp  generate_color_graph.cpp  generate_graph.cpp  graph.hpp  graph_painter.hpp  k33_data_m_4.pkl  k33_data_m_5.pkl  k3_data_m_5.pkl  k5_data_m_4.pkl  k5_data_m_5.pkl  k5_data_m_6.pkl  main.cpp  neighbour-density-per-degree.pkl  preferential-colouring-of-random-graphs.ipynb  preferential-colouring-of-random-graphs.wlnb  random_graph_factory.cpp  random_graph_factory.hpp  results.wlnb  results_3_2_10.pkl  results_3_2_11.pkl  results_3_2_12.pkl  results_3_2_13.pkl  results_3_2_16.pkl  results_3_2_21.pkl  results_3_3_10.pkl  results_3_3_11.pkl  results_3_3_12.pkl  results_3_3_13.pkl  results_3_3_17.pkl  (+1 more)
benchmarks/: ba_time_m_2.txt  ba_time_m_2_processed.txt  ba_time_m_3.txt  ba_time_m_3_processed.txt  ba_time_m_4.txt  ba_time_m_4_processed.txt  ba_time_m_5.txt  ba_time_m_5_processed.txt  base_max_planar_subgraph_edges_m_2.txt  base_max_planar_subgraph_edges_m_3.txt  base_max_planar_subgraph_edges_m_4.txt  base_max_planar_subgraph_edges_m_5.txt  base_max_planar_subgraph_ratios_m_2.txt  base_max_planar_subgraph_ratios_m_3.txt  base_max_planar_subgraph_ratios_m_4.txt  base_max_planar_subgraph_ratios_m_5.txt  base_max_planar_subgraph_times_bm.txt  base_max_planar_subgraph_times_cactus.txt  (+33 more)
implementation/: .gitignore  CMakeLists.txt  avoiding_kuratowski_graphs_painter.cpp  avoiding_kuratowski_graphs_painter.hpp  ba_graph.hpp  benchmark.cpp  colors_balance_globally_painter.cpp  colors_balance_locally_painter.cpp  disjoint_set.hpp  graph.hpp  main.cpp  max_planar_subgraph.cpp  max_planar_subgraph.hpp  metric_calculator.cpp  metric_calculator.hpp  planarity_test.hpp  preferential_coloring.cpp  preferential_coloring.hpp  random_graph_factory.cpp  random_graph_factory.hpp  sparse_graph.hpp
(+70 files in other folders)
